Almost at End of Day. Stopping Point before going further
