# untitled folder/fgwva/api/controllers/restaurants.js
@@ -5,7 +5,9 @@
 var request = require("request");
 
 module.exports = {
-    getRestaurants: getRestaurants
+    getRestaurants: getRestaurants,
+    getRestaurantsByID: getRestaurantsByID,
+    getReviews: getReviews
 }
 
 function getRestaurants (req, res) {
@@ -16,10 +18,34 @@ function getRestaurants (req, res) {
         //end first way - the above way is not a good best practice
         //second way to make this work is
         var results = {};
-        results.entities = JSON.parse(body).entities;
-        results.count = results.entities.length;
+        results.restaurants = JSON.parse(body).entities;
+        results.count = results.restaurants.length;
         //end second way
         //res.send(body) -- the second way mandates we change this
         res.send(results)
     });
+}
+
+function getRestaurantsByID (req, res) {
+    var restID = req.swagger.params.id.value;
+    request("http://api.usergrid.com/jahmekyanbwoy/sandbox/restaurants?ql=restID=" + restID,
+        function(err, resp, body) {
+            var results = {};
+            results.restaurants = JSON.parse(body).entities;
+            results.count = results.restaurants.length;
+            res.send(results)
+        });
+
+}
+
+function getReviews (req, res) {
+    var restID = req.swagger.params.id.value;
+    request("http://api.usergrid.com/jahmekyanbwoy/sandbox/reviews?ql=restID=" + restID,
+        function(err, resp, body) {
+            var results = {};
+            results.restaurants = JSON.parse(body).entities;
+            results.count = results.restaurants.length;
+            res.send(results)
+        });
+
 }
